Add privacy policy

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -108,4 +108,5 @@
     <string name="starting_digit">Position de départ</string>
     <string name="complete_mode_not_possible">Complete mode can\'t be used with this number because it has too few digits. Please select another number.</string>
     <string name="invalid">Invalide</string>
+    <string name="privacy_policy">Confidentialité</string>
 </resources>
