Add line count option to ReferenceFragment
And put checkboxes before spacings and lineCount editTexts

--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -17,7 +17,7 @@
     <string name="reference">Getal</string>
     <string name="restart">Opnieuw</string>
     <string name="settings">Instellingen</string>
-    <string name="spacings">Spaties</string>
+    <string name="spaces">Spaties</string>
     <string name="text_size_colon">Tekstgrootte: %d</string>
     <string name="vibrate">Trillen</string>
     <string name="add_number">Voeg toe…</string>
