--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,7 +19,7 @@
     <string name="number_option_dialog_title">Sélectionner le nombre</string>
     <string name="settings">Réglages</string>
     <string name="text_size_colon">Taille du texte : %d</string>
-    <string name="spacings">Espaces</string>
+    <string name="spaces">Espaces</string>
     <string name="number_of_digits_given_colon">Nombre de chiffres donnés : %d</string>
     <string name="range">Intervalle</string>
     <string name="next">Suivant</string>
